src/mflibrary/mfFilter/mfFilterParser.output
Grammar

    0 $accept: Criterion $end

    1 $@1: ε

    2 Criterion: $@1 Expression

    3 Or: "&"

    4 Expression: Term
    5           | Expression Or Term

    6 And: "|"

    7 Term: Factor
    8     | Term And Factor

    9 Factor: String
   10       | "=" String
   11       | SubExpression

   12 SubExpression: "(" Expression ")"

   13 SingleString: "single quoted_string"
   14             | "double quoted_string"

   15 String: SingleString
   16       | String SingleString


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "|" (258) 6
    "&" (259) 3
    "=" (260) 10
    "(" (261) 12
    ")" (262) 12
    "single quoted_string" <std::string> (263) 13
    "double quoted_string" <std::string> (264) 14


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    Criterion <std::string> (11)
        on left: 2
        on right: 0
    $@1 (12)
        on left: 1
        on right: 2
    Or (13)
        on left: 3
        on right: 5
    Expression <std::string> (14)
        on left: 4 5
        on right: 2 5 12
    And (15)
        on left: 6
        on right: 8
    Term <std::string> (16)
        on left: 7 8
        on right: 4 5 8
    Factor <std::string> (17)
        on left: 9 10 11
        on right: 7 8
    SubExpression <std::string> (18)
        on left: 12
        on right: 11
    SingleString <std::string> (19)
        on left: 13 14
        on right: 15 16
    String <std::string> (20)
        on left: 15 16
        on right: 9 10 16


State 0

    0 $accept: • Criterion $end

    $default  reduce using rule 1 ($@1)

    Criterion  go to state 1
    $@1        go to state 2


State 1

    0 $accept: Criterion • $end

    $end  shift, and go to state 3


State 2

    2 Criterion: $@1 • Expression

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    Expression     go to state 8
    Term           go to state 9
    Factor         go to state 10
    SubExpression  go to state 11
    SingleString   go to state 12
    String         go to state 13


State 3

    0 $accept: Criterion $end •

    $default  accept


State 4

   10 Factor: "=" • String

    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    SingleString  go to state 12
    String        go to state 14


State 5

   12 SubExpression: "(" • Expression ")"

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    Expression     go to state 15
    Term           go to state 9
    Factor         go to state 10
    SubExpression  go to state 11
    SingleString   go to state 12
    String         go to state 13


State 6

   13 SingleString: "single quoted_string" •

    $default  reduce using rule 13 (SingleString)


State 7

   14 SingleString: "double quoted_string" •

    $default  reduce using rule 14 (SingleString)


State 8

    2 Criterion: $@1 Expression •
    5 Expression: Expression • Or Term

    "&"  shift, and go to state 16

    $default  reduce using rule 2 (Criterion)

    Or  go to state 17


State 9

    4 Expression: Term •
    8 Term: Term • And Factor

    "|"  shift, and go to state 18

    $default  reduce using rule 4 (Expression)

    And  go to state 19


State 10

    7 Term: Factor •

    $default  reduce using rule 7 (Term)


State 11

   11 Factor: SubExpression •

    $default  reduce using rule 11 (Factor)


State 12

   15 String: SingleString •

    $default  reduce using rule 15 (String)


State 13

    9 Factor: String •
   16 String: String • SingleString

    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    $default  reduce using rule 9 (Factor)

    SingleString  go to state 20


State 14

   10 Factor: "=" String •
   16 String: String • SingleString

    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    $default  reduce using rule 10 (Factor)

    SingleString  go to state 20


State 15

    5 Expression: Expression • Or Term
   12 SubExpression: "(" Expression • ")"

    "&"  shift, and go to state 16
    ")"  shift, and go to state 21

    Or  go to state 17


State 16

    3 Or: "&" •

    $default  reduce using rule 3 (Or)


State 17

    5 Expression: Expression Or • Term

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    Term           go to state 22
    Factor         go to state 10
    SubExpression  go to state 11
    SingleString   go to state 12
    String         go to state 13


State 18

    6 And: "|" •

    $default  reduce using rule 6 (And)


State 19

    8 Term: Term And • Factor

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted_string"  shift, and go to state 6
    "double quoted_string"  shift, and go to state 7

    Factor         go to state 23
    SubExpression  go to state 11
    SingleString   go to state 12
    String         go to state 13


State 20

   16 String: String SingleString •

    $default  reduce using rule 16 (String)


State 21

   12 SubExpression: "(" Expression ")" •

    $default  reduce using rule 12 (SubExpression)


State 22

    5 Expression: Expression Or Term •
    8 Term: Term • And Factor

    "|"  shift, and go to state 18

    $default  reduce using rule 5 (Expression)

    And  go to state 19


State 23

    8 Term: Term And Factor •

    $default  reduce using rule 8 (Term)
